KQED -/src/objects/WGBH_Supervisor__c.object
<CustomObject>
    <description>This is the list of active WGBH Supervisors from Lawson.</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>Unique identifier for employee</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Job Title for Supervisor</description>
        <label>Description</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <description>The WGBH Employee ID number of the supervisor</description>
        <label>Employee ID</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Supervisor&apos;s First Name</description>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the Supervisor an Active employee</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>The Last name of the supervisor</description>
        <label>Last Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>WGBH Supervisor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>Code__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WGBH Supervisor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGBH Supervisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>